--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,8 @@
     "*.css.liquid": "liquid-css",
     "*.scss.liquid": "liquid-scss",
     "iostream": "cpp",
-    "istream": "cpp"
-  }
+    "istream": "cpp",
+    "tuple": "cpp"
+  },
+  "C_Cpp.errorSquiggles": "disabled"
 }
