--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     "*.scss.liquid": "liquid-scss",
     "iostream": "cpp",
     "istream": "cpp",
-    "tuple": "cpp"
+    "tuple": "cpp",
+    "ostream": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
