add a first class

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,9 @@
     "iostream": "cpp",
     "istream": "cpp",
     "tuple": "cpp",
-    "ostream": "cpp"
+    "ostream": "cpp",
+    "__config": "cpp",
+    "__nullptr": "cpp"
   },
   "C_Cpp.errorSquiggles": "disabled"
 }
